# tinyrag

./: .gitignore  README.md  pyproject.toml  tinyrag.excalidraw  tinyrag.py  vectorize.py
data/: Potter 3000 Whasing Machine User Manual.md
