[tool.poetry]
name = "tinyrag"
version = "0.1.0"
description = "Langchain RAG example"
authors = ["Pere Pasamonte"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
langchain = "^0.2.5"
langchain-community = "^0.2.5"
openai = "^1.34.0"
chromadb = "^0.5.3"
langchain-groq = "^0.1.5"
transformers = "^4.41.2"
unstructured = "^0.14.7"
markdown = "^3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
